# activistChatbot

./: .editorconfig  .pre-commit-config.yaml  README.md  example.env  pyproject.toml
.forgejo/workflows/: build_publish.yaml
.github/workflows/: python_lint_test.yaml
container/: Containerfile  compose.yaml  run.sh
scripts/: check_license_header.sh
src/activist_chatbot/: __main__.py  database_management.py  main.py  settings.py
src/commands/: __init__.py  help.py  ping.py  reminder.py  subscription.py
src/contacts/: __init__.py  __main__.py  allowed_contacts.py  authorisation.py  models.py  subscriptions.py
src/events/: __main__.py  fetch_events.py  models.py
src/schedules/: __main__.py
tests/commands/: test_subscription.py
typings/aiocron/: __init__.pyi
typings/signalbot/: __init__.pyi  api.pyi  bot.pyi  command.pyi  context.pyi  link_previews.pyi  message.pyi  quote.pyi  storage.pyi
typings/signalbot/utils/: __init__.pyi  chat_testing.pyi
