[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "activistChatbot"
dynamic = ["version"]
description = "A notification signal chatbot which reminds you on upcoming events."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL" }
dependencies = [
    "aiocron==2.1",
    "beautifulsoup4>=4.14.3",
    "dateparser>=1.2.2",
    "django-environ>=0.12.0",
    "loguru>=0.7.3",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "signalbot>=0.20.0",
    "sqlmodel>=0.0.27",
]

[project.scripts]
activistChatbot = "activist_chatbot.main:main"
scrapeEvents = "tasks.__main__:main"
scheduleNotification = "schedules.__main__:main"

[tool.uv]
dev-dependencies = ["pytest>=9.0.2", "ruff>=0.14.9"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]
